<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yenci Estilo</string>
    <string name="conoceme">Conóceme</string>
    <string name="proyeccionimagen">Proyección E Imagen</string>
    <string name="seminariostalleres">Seminarios Y Talleres</string>
    <string name="protocoloetiqueta">Protocolo Y Etiqueta</string>
    <string name="asesoriaonline">Tip´s</string>
    <string name="mejoresofertas">Mejores Ofertas</string>

    <string-array name="menu_array">
        <item>Conóceme</item>
        <item>Proyección E Imagen</item>
        <item>Seminarios Y Talleres</item>
        <item>Protocolo Y Etiqueta</item>
        <item>Tip´s</item>
        <item>Contáctame</item>
    </string-array>

    <string name="action_settings">Acerca de</string>
    <string name="menu">menu</string>
    <string name="intro"></string>
     <string name="tit_mision">
         MISIÓN         
     </string>
     <string name="tit_vision">
         VISIÓN         
     </string>
    <string name="mision">Actualmente, es importante invertir en los activos más valiosos de la organización: los colaboradores. 
Por tanto, estamos empeñados en potencializar la imagen corporativa de ellos, 
tanto individual como en grupos de trabajo. 
La imagen es a nivel personal.
Se trabajará por medio de seminarios y talleres, cuyo objetivo central es fortalecer su imagen profesional, 
articulándola con la imagen de la empresa. </string>
    <string name="vision">Para el año 2016, seremos la mejor empresa colombiana que brinde proyección de imagen y protocolo a personas o grupos empresariales. 
Con una identidad corporativa de acuerdo con la cultura organizacional del entorno. 
El protocolo y la etiqueta que ofrecemos, a nuestros clientes, marcarán la diferencia ante la competencia.</string>

    
 <string name="tit_semtall">
         Yenci Forero esta disponible para impartir conferencias y seminarios  a grupos empresariales, 
administrativos y particulares.\nAlgunas de las charlas son:        
     </string>
    
 <string name="tit_propio">
         \nTU PROPIO ESTILO ES TU IMAGEN DE ÉXITO      
     </string>
 
    
 <string name="propio">   
    - Que es imagen \n
	- Que imagen proyecto con lo que uso \n
	- Descubriendo mi propio estilo \n
	- Auto Imagen \n
	- La Imagen de la empresa y sus componentes \n
	- Esa primera impresión \n
	- Como proyectar una imagen de autoridad.
	
      </string>
 
 <string name="tit_poten">
     \nACEPTARNOS Y POTENCIALIZARNOS
 </string>
 
 <string name="potenciar">
- Que soy y que quiero proyectar \n
- Relaciones humanas exitosas \n
- Conoce tu figura y lo que proyectas \n
- Secretos para balancear ópticamente tu figura \n
- El color y tu \n
- Código de vestuario en el trabajo \n
- Secretos de la comunicación no verba \n
 </string>
 
  <string name="tit_prot">
     \nTU ACTIVO MÁS IMPORTANTE PROTOCOLO EMPRESARIAL
 </string>
 
  <string name="protocolo">
- La Imagen un valor agregado \n
- Trato y cortesía en la oficina \n
- El teléfono es tu Imagen \n
- Representando con éxito la imagen de tu empresa \n
  </string>
 
  
  
</resources>