<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
 

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/fondo"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/intro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="30px"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tit_mision"
            android:textSize="45px" />

        <TextView
            android:id="@+id/vision"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:ellipsize="marquee"
            android:text="@string/mision"
            android:textSize="30px" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tit_vision"
            android:textSize="45px" />

        <TextView
            android:id="@+id/mision"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:ellipsize="marquee"
            android:text="@string/vision"
            android:textSize="30px" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:textSize="25px" />
    </LinearLayout>
 

</FrameLayout>