<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo" >
   
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:ellipsize="marquee"
            android:gravity="bottom"
            android:text="@string/tit_semtall"
            android:textSize="35px"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/idTit_propio"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/tit_propio"
                     android:textStyle="bold"
                    android:textSize="25px" />

                <ImageView
                    android:id="@+id/idSeminariotalleres1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/idTit_propio"
                    android:layout_gravity="right"
                    android:layout_margin="15dp"
                  
                    android:src="@drawable/seminariotalleres1" />

                <TextView
                    android:id="@+id/idPropio"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/idSeminariotalleres1"
                    android:layout_margin="15dp"
                    android:layout_toLeftOf="@id/idSeminariotalleres1"
                    android:gravity="top"
                    android:text="@string/propio"
                    android:textSize="20px" />

                <TextView
                    android:id="@+id/idTit_poten"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idPropio"
                    android:layout_margin="20dp"
                   
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/tit_poten"
                    android:textStyle="bold"
                    android:textSize="25px" />

                <ImageView
                    android:id="@+id/idSeminariotalleres2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/idTit_poten"
                    android:layout_gravity="right"
                    android:layout_margin="15dp"             
                    android:src="@drawable/seminariotalleres2" />

                <TextView
                    android:id="@+id/idPoten"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/idSeminariotalleres2"
                    android:layout_margin="15dp"
                    android:layout_toLeftOf="@id/idSeminariotalleres2"                  
                    android:gravity="left"
                    android:text="@string/potenciar"
                    android:textSize="20px" />
   			<TextView
                    android:id="@+id/idTit_prot"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idPoten"
                    android:layout_margin="20dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/tit_prot"
                    android:textStyle="bold"
                    android:textSize="25px" />

                <ImageView
                    android:id="@+id/idSeminariotalleres3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/idTit_prot"
                    android:layout_gravity="right"
                    android:layout_margin="15dp"             
                    android:src="@drawable/seminariotalleres3" />

                <TextView
                    android:id="@+id/idProtocolo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/idSeminariotalleres3"
                    android:layout_margin="15dp"
                    android:layout_toLeftOf="@id/idSeminariotalleres3"                  
                    android:gravity="left"
                    android:text="@string/protocolo"
                    android:textSize="20px" />
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>